--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background-image: url("github.com/damirossetti/aprecir/bg.jpg");
+  background-image: url("/bg.jpg");
   background-repeat: repeat;
   background-size: 100vh;
   overflow: hidden;
