--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-  background-image: url("https://github.com/damirossetti/apprecir/blob/main//bg.jpg");
+  background-image: url("https://damirossetti.github.io/apprecir/bg.jpg");
   background-repeat: repeat;
   background-size: 100vh;
   overflow: hidden;
